--- a/demo/radio_demo.project
+++ b/demo/radio_demo.project
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<CodeLite_Project Name="radio_demo_cpp_tnc" InternalType="">
+<CodeLite_Project Name="radio_demo" InternalType="">
   <Plugins>
     <Plugin Name="qmake">
       <![CDATA[00020001N0005Debug0000000000000001N0007Release000000000000]]>
@@ -28,11 +28,7 @@
   </Plugins>
   <Description/>
   <Dependencies/>
-  <VirtualDirectory Name="radio_demo_cpp_tnc">
-    <File Name="radio_demo_cpp_tnc.cpp"/>
-    <File Name="Makefile"/>
-  </VirtualDirectory>
-  <Settings Type="Executable">
+  <Settings Type="Dynamic Library">
     <GlobalSettings>
       <Compiler Options="" C_Options="" Assembler="">
         <IncludePath Value="."/>
@@ -42,13 +38,13 @@
       </Linker>
       <ResourceCompiler Options=""/>
     </GlobalSettings>
-    <Configuration Name="Debug" CompilerType="GCC" DebuggerType="GNU gdb debugger" Type="Executable" BuildCmpWithGlobalSettings="append" BuildLnkWithGlobalSettings="append" BuildResWithGlobalSettings="append">
+    <Configuration Name="Debug" CompilerType="GCC" DebuggerType="GNU gdb debugger" Type="Dynamic Library" BuildCmpWithGlobalSettings="append" BuildLnkWithGlobalSettings="append" BuildResWithGlobalSettings="append">
       <Compiler Options="-g" C_Options="-g" Assembler="" Required="yes" PreCompiledHeader="" PCHInCommandLine="no" PCHFlags="" PCHFlagsPolicy="0">
         <IncludePath Value="."/>
       </Compiler>
       <Linker Options="" Required="yes"/>
       <ResourceCompiler Options="" Required="no"/>
-      <General OutputFile="$(IntermediateDirectory)/radio_demo_cpp_tnc" IntermediateDirectory="." Command="$(IntermediateDirectory)/radio_demo_cpp_tnc" CommandArguments="" UseSeparateDebugArgs="no" DebugArguments="" WorkingDirectory="$(IntermediateDirectory)" PauseExecWhenProcTerminates="yes" IsGUIProgram="no" IsEnabled="yes"/>
+      <General OutputFile="" IntermediateDirectory="./Debug" Command="" CommandArguments="" UseSeparateDebugArgs="no" DebugArguments="" WorkingDirectory="$(IntermediateDirectory)" PauseExecWhenProcTerminates="yes" IsGUIProgram="no" IsEnabled="yes"/>
       <Environment EnvVarSetName="&lt;Use Defaults&gt;" DbgSetName="&lt;Use Defaults&gt;">
         <![CDATA[]]>
       </Environment>
@@ -60,12 +56,13 @@
       <PreBuild/>
       <PostBuild/>
       <CustomBuild Enabled="yes">
-        <Target Name="DistClean">make distclean</Target>
-        <RebuildCommand>make rebuild DEBUG=ON</RebuildCommand>
-        <CleanCommand>make clean</CleanCommand>
-        <BuildCommand>make all DEBUG=ON</BuildCommand>
+        <Target Name="Distclean">rm -fr build-debug</Target>
+        <Target Name="CMake">mkdir -p build-debug &amp;&amp; cd build-debug &amp;&amp; cmake -G "Unix Makefiles" .. -DCMAKE_BUILD_TYPE=Debug</Target>
+        <RebuildCommand>make -C build-debug clean &amp;&amp; make -j4 -C build-debug</RebuildCommand>
+        <CleanCommand>make -C build-debug clean</CleanCommand>
+        <BuildCommand> make -j4 -C build-debug</BuildCommand>
         <PreprocessFileCommand/>
-        <SingleFileCommand>make $(CurrentFileName).o DEBUG=ON</SingleFileCommand>
+        <SingleFileCommand>make -j4 -C build-debug $(CurrentFileName).o</SingleFileCommand>
         <MakefileGenerationCommand/>
         <ThirdPartyToolName>None</ThirdPartyToolName>
         <WorkingDirectory>$(ProjectPath)</WorkingDirectory>
@@ -81,13 +78,13 @@
         <SearchPaths/>
       </Completion>
     </Configuration>
-    <Configuration Name="Release" CompilerType="GCC" DebuggerType="GNU gdb debugger" Type="Executable" BuildCmpWithGlobalSettings="append" BuildLnkWithGlobalSettings="append" BuildResWithGlobalSettings="append">
+    <Configuration Name="Release" CompilerType="GCC" DebuggerType="GNU gdb debugger" Type="Dynamic Library" BuildCmpWithGlobalSettings="append" BuildLnkWithGlobalSettings="append" BuildResWithGlobalSettings="append">
       <Compiler Options="" C_Options="" Assembler="" Required="yes" PreCompiledHeader="" PCHInCommandLine="no" PCHFlags="" PCHFlagsPolicy="0">
         <IncludePath Value="."/>
       </Compiler>
       <Linker Options="-O2" Required="yes"/>
       <ResourceCompiler Options="" Required="no"/>
-      <General OutputFile="radio_demo_cpp_tnc" IntermediateDirectory="." Command="$(IntermediateDirectory)/radio_demo_cpp_tnc" CommandArguments="" UseSeparateDebugArgs="no" DebugArguments="" WorkingDirectory="$(IntermediateDirectory)" PauseExecWhenProcTerminates="yes" IsGUIProgram="no" IsEnabled="yes"/>
+      <General OutputFile="" IntermediateDirectory="./Release" Command="" CommandArguments="" UseSeparateDebugArgs="no" DebugArguments="" WorkingDirectory="$(IntermediateDirectory)" PauseExecWhenProcTerminates="yes" IsGUIProgram="no" IsEnabled="yes"/>
       <Environment EnvVarSetName="&lt;Use Defaults&gt;" DbgSetName="&lt;Use Defaults&gt;">
         <![CDATA[]]>
       </Environment>
@@ -99,12 +96,13 @@
       <PreBuild/>
       <PostBuild/>
       <CustomBuild Enabled="yes">
-        <Target Name="DistClean">make distclean</Target>
-        <RebuildCommand>make rebuild</RebuildCommand>
-        <CleanCommand>make clean</CleanCommand>
-        <BuildCommand>make</BuildCommand>
+        <Target Name="Distclean">rm -fr build-release</Target>
+        <Target Name="CMake">mkdir -p build-release &amp;&amp; cd build-release &amp;&amp; cmake -G "Unix Makefiles" .. -DCMAKE_BUILD_TYPE=Release</Target>
+        <RebuildCommand>make -C build-release clean &amp;&amp; make -j4 -C build-release</RebuildCommand>
+        <CleanCommand>make -C build-release clean</CleanCommand>
+        <BuildCommand>make -j4 -C build-release</BuildCommand>
         <PreprocessFileCommand/>
-        <SingleFileCommand>make $(CurrentFileName).o</SingleFileCommand>
+        <SingleFileCommand>make -j4 -C build-release $(CurrentFileName).o</SingleFileCommand>
         <MakefileGenerationCommand/>
         <ThirdPartyToolName>None</ThirdPartyToolName>
         <WorkingDirectory>$(ProjectPath)</WorkingDirectory>
@@ -121,6 +119,13 @@
       </Completion>
     </Configuration>
   </Settings>
+  <VirtualDirectory Name="demo">
+    <File Name="radio_demo_tnc.c"/>
+    <File Name="CMakeLists.txt"/>
+    <File Name="radio_demo_aprs.c"/>
+    <File Name="radio_demo_cpp_ax25.cpp"/>
+    <File Name="radio_demo_cpp_tnc.cpp"/>
+  </VirtualDirectory>
   <Dependencies Name="Debug"/>
   <Dependencies Name="Release"/>
 </CodeLite_Project>
